nextcloud/middleware.yml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: nextcloud
  namespace: nextcloud
spec:
  headers:
    forceSTSHeader: true
    stsIncludeSubdomains: true
    stsPreload: true
    stsSeconds: 15552000
    customRequestHeaders:
      X-Forwarded-Proto: https
