nextcloud/ingress.yml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: nextcloud
  namespace: default
spec:
  ingressClassName: traefik-external
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`cloud.mandariini.uk`)
      services:
        - name: nextcloud
          namespace: nextcloud
          port: 8080
      middlewares:
        - name: nextcloud
          namespace: nextcloud
  tls:
    secretName: mandariini-uk-tls
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: collabora
  namespace: default
spec:
  ingressClassName: traefik-external
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`collabora.mandariini.uk`)
      services:
        - name: nextcloud-collabora
          namespace: nextcloud
          port: 9980
      middlewares:
        - name: nextcloud
          namespace: nextcloud
  tls:
    secretName: mandariini-uk-tls
